La deconnexion marche désormais comme prévue

--- a/MHClient/mini-hearthstone/src/app/app.component.html
+++ b/MHClient/mini-hearthstone/src/app/app.component.html
@@ -21,7 +21,7 @@
         </div>
     </form>
 </div>
-<div id="gameSearch">
+<div id="gameSearch" style="display: none">
     <div>
         <button id="connectToGame" class="btn btn-default" type="button" (click)="openHeroSelect()">Trouver une partie</button>
     </div>
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<div id="theBoard">
+<div id="theBoard" style="display: none">
 
     <div id="parentHisHero" class="row">
         <div >
