--- a/MHClient/mini-hearthstone/src/app/app.component.html
+++ b/MHClient/mini-hearthstone/src/app/app.component.html
@@ -187,9 +187,9 @@
                     </div>
                     <img src={{myHero?.powerImgUrl}} alt="Avatar" style="width:100%">
                     <div class="containerCardDetails">
-                        <h4><b>{{myHero.powerImgName}}</b></h4>
+                        <h4><b>{{myHero?.powerImgName}}</b></h4>
                         <p>Coût: <b>2</b></p>
-                        <p>{{myHero.powerImgText}}</p>
+                        <p>{{myHero?.powerImgText}}</p>
                     </div>
 
                 </form>
